# YMMKeyboard

./: .gitignore  Directory.Build.props  LICENSE  LICENSE.txt  README.md  YMMKeyboardPlugin.slnx
RP2040ZeroCode/: code.py  main.py
YMMKeyboardPlugin/: BaseViewModel.cs  CreateDefaultMapping.cs  CustomControl1.cs  KeyEvent.cs  KeyboardAction.cs  KeyboardMappingWindow.xaml  KeyboardMappingWindow.xaml.cs  KeyboardView.xaml  KeyboardView.xaml.cs  Keymacro.cs  Mp3InsertView.xaml  Mp3InsertView.xaml.cs  Mp3InsertViewModel.cs  MyToolPlugin.cs  RelayCommand.cs  SerialKeyboardLink.cs  SerialUidFinder.cs  SwitchAssignmentItem.cs  SwitchLayout.cs  TestEvent.cs  ToolView.xaml  ToolView.xaml.cs  ToolViewModel.cs  YMMKeyboardPlugin.csproj  YMMKeyboardSettingsPanel.xaml  YMMKeyboardSettingsPanel.xaml.cs  YMMKeyboardSettingsView.Events.cs
docs/: README.md  button-hid-report-correlation.md  button-path-validation.md  cdc-trace-capture-result.md  cdc-trace-capture.md  com-hid-correlation-probe-result.md  com-hid-correlation-probe.md  current-status-report.md  device-identity.md  device-protocol.md  diagnostics-cheatsheet.md  diagnostics-foundation-rc2-freeze.md  diagnostics-foundation-rc2.md  diagnostics-replay.md  diagnostics-workflow.md  dispatch-diagnostics.md  dispatch-execution-rc1.md  firmware-hid-report-send-debug.md  firmware-hid-runtime-observation.md  firmware-identity-audit.md  firmware-identity-rc1.md  (+63 more)
firmware/src/RP2040TinyUsb/: CMakeLists.txt  CMakePresets.json  README.md
firmware/src/RP2040TinyUsb/src/: main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
(+273 files in other folders)
